# cala

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INPUT.md  MENU.md  QUALITY.md  README.md  build.rs  changelog.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
_layouts/: default.html
design/: WINDOW.md
docs/: index.html  style.css
docs/CODEOFCONDUCT/: index.html
docs/MENU/: index.html
docs/QUALITY/: index.html
docs/changelog/: index.html
docs/tutorials/: README.md
examples/: controller.rs  monitoring.rs  user.rs
examples/controller/: Cargo.toml
examples/controller/src/: main.rs
examples/log/: Cargo.toml
examples/log/src/: main.rs
examples/monitoring/: Cargo.toml
examples/monitoring/src/: main.rs
examples/tcp/: Cargo.toml
examples/tcp/src/: main.rs
examples/user/: Cargo.toml
examples/user/src/: main.rs
examples/video/: Cargo.toml  build.rs
examples/video/src/: main.rs
old/: Cargo.toml
old/adi/: Cargo.toml
old/adi/src/: lib.rs  wasm.rs
old/siyo/: Cargo.toml  install
old/siyo/examples/: clock.rs  input.rs
old/siyo/siyo/: main.rs
old/siyo/src/: lib.rs
old/siyo/src/clock/: mod.rs
old/siyo/src/drive/: mod.rs
old/siyo/src/hid/: mod.rs
old/siyo/src/hid/ffi/: linux.rs  mod.rs  wasm.rs
old/siyo/src/hid/ffi/evdev_mappings/: ps.rs
old/siyo/src/math/: mod.rs
old/siyo/src/screen/: mod.rs
old/siyo/src/shared/: mod.rs
old/siyo/src/shared/alsa/: alsa.rs  mod.rs  pcm.rs
old/siyo/src/shared/wasm/: frag.glsl  mod.rs  vert.glsl  webgl_rendering_context.rs
old/src/: main.rs
old/test_triangle/: Cargo.toml  build.rs
old/test_triangle/src/: main.rs
old/test_triangle/static/: index.html
old/xcb_testzone/: Cargo.toml  xcb.c
old/xcb_testzone/src/: adi.rs  main.rs
old/xcb_testzone/src/src/: mod.rs
rvg/: back.svg.rvg  exit.svg.rvg  fullscreen.svg.rvg  grid.svg.rvg  hide.svg.rvg  menu.svg.rvg  more.svg.rvg  new.svg.rvg  next.svg.rvg  search.svg.rvg  view.svg.rvg  zoom_in.svg.rvg  zoom_out.svg.rvg
src/: audio.rs  bluetooth.rs  camera.rs  client.rs  clock.rs  controller.rs  database.rs  dive.rs  exec.rs  graphics.rs  gui.rs  haptic.rs  hardware.rs  icons.rs  info.rs  input.rs  iolock.rs  lib.rs  log.rs  microphone.rs  net.rs  page.rs  port.rs  prelude.rs  random.rs  run.rs  server.rs  speakers.rs  task.rs  time.rs  timer.rs  usb.rs  user.rs  video.rs  when.rs  window.rs
src/aldaron/: lib.rs
src/aldaron/screen/: wayland.rs
src/demo/: main.rs
src/hardware/: accel.rs  access.rs  bluetooth.rs  camera.rs  draw.rs  exec.rs  file.rs  gpio.rs  graphics.rs  input.rs  journal.rs  log.rs  microphone.rs  net.rs  pixels.rs  random.rs  screen.rs  speaker.rs  speakers.rs  time.rs  user.rs
src/internal/: barg.rs  mod.rs  stick.rs  stronghold.rs  wavy.rs  whoami.rs
