# Cala
#
# Copyright © 2017-2020 Jeron Aldaron Lau.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
# copy at https://opensource.org/licenses/MIT)

[package]
name = "cala"
version = "0.8.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
description = "Make portable apps and video games in Rust!"
documentation = "https://docs.rs/cala"
homepage = "https://libcala.github.io/cala"
repository = "https://github.com/libcala/cala"
readme = "README.md"
keywords = ["device", "platform-agnostic", "cross-platform", "io", "gui"]
categories = ["game-engines", "hardware-support", "multimedia", "os"]

[badges]
travis-ci = { repository = "libcala/cala" }
is-it-maintained-issue-resolution = { repository = "libcala/cala" }
is-it-maintained-open-issues = { repository = "libcala/cala" }
maintenance = { status = "actively-developed" }

[dependencies]
pasts = {version = "0.4", optional = true} # async main
whoami = {version = "0.8", optional = true} # user
wavy = {version = "0.2", optional = true} # audio
stronghold = {version = "0.2", optional = true} # file
serde = {version = "1.0", optional = true}
stick = {version = "0.8", optional = true} # joystick / controller
# barg = {version = "0.2", optional = true} # video
window = {path = "../window", optional = true} # {version = "0.3", optional = true}
fonterator = {version = "0.7", optional = true, default-features = false, features = ["normal-font"]}
pix = {version = "0.12", optional = true}
rvg = {path = "../rvg", optional = true, default-features = false, features = ["render"]}
footile = {version = "0.4", optional = true}
chrono = {version = "0.4", optional = true, default-features = false, features = ["clock"]}
smelling_salts = {version = "0.1", optional = true}
num_cpus = {version = "1.0", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"

[build-dependencies]
res = {version = "0.5", optional = true} # video

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["pasts", "num_cpus"]
user = ["whoami"]
audio = ["wavy"]
files = ["stronghold", "serde"]
gamepad = ["stick"]
graphics = ["window", "fonterator", "timer", "res", "rvg", "footile", "pix"]
camera = []
time = ["chrono", "timer"]
timer = []
net = ["smelling_salts"]
bluetooth = []
