# Cala
#
# Copyright © 2017-2020 Jeron Aldaron Lau.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
# copy at https://opensource.org/licenses/MIT)

[package]
name = "cala"
version = "0.8.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "Apache-2.0 OR Zlib"
description = "Make portable apps and video games in Rust!"
documentation = "https://docs.rs/cala"
homepage = "https://libcala.github.io/cala"
repository = "https://github.com/libcala/cala"
readme = "README.md"
keywords = ["device", "platform-agnostic", "cross-platform", "io", "gui"]
categories = ["game-engines", "hardware-support", "multimedia", "os"]

[badges]
travis-ci = { repository = "libcala/cala" }
is-it-maintained-issue-resolution = { repository = "libcala/cala" }
is-it-maintained-open-issues = { repository = "libcala/cala" }
maintenance = { status = "actively-developed" }

[dependencies]
human = {version = "0.1", optional = true} # input
pasts = {version = "0.6", optional = true} # async
whoami = {version = "1.0", optional = true} # user
wavy = {version = "0.6", optional = true} # audio
stronghold = {version = "0.2", optional = true} # file
serde = {version = "1.0", optional = true}
window = {version = "0.4", optional = true} # pixels, draw
fonterator = {version = "0.9", optional = true, default-features = false, features = ["normal-font"]}
pix = {version = "0.13", optional = true}
rvg = {version = "0.2", optional = true, default-features = false, features = ["render"]}
footile = {version = "0.6", optional = true}
chrono = {version = "0.4", optional = true, default-features = false, features = ["clock"]}
smelling_salts = {version = "0.1", optional = true}
devout = {version = "0.2", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
version = "0.1"
features = ["cala"]

[build-dependencies]
res = {version = "0.6", optional = true} # video

[dev-dependencies]
fon = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["exec"]
access = []
bluetooth = []
camera = []
draw = ["window", "fonterator", "res", "rvg", "footile", "pix"]
exec = ["pasts"]
file = ["stronghold", "serde"]
gpio = []
input = ["human"]
log = ["devout"]
microphone = ["wavy"]
net = ["smelling_salts"]
user = ["whoami"]
pixels = ["draw"]
speakers = ["wavy"]
time = ["chrono"]
