# Cala
# Copyright © 2017-2021 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "cala"
version = "0.9.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "Make portable apps and video games in Rust!"
documentation = "https://docs.rs/cala"
homepage = "https://libcala.github.io/cala"
repository = "https://github.com/libcala/cala"
readme = "README.md"
keywords = ["device", "platform-agnostic", "cross-platform", "io", "gui"]
categories = ["game-engines", "hardware-support", "multimedia", "os"]

[dependencies]
human = {version = "0.2", optional = true} # input
pasts = {version = "0.8", optional = true} # async
whoami = {version = "1.0", optional = true} # user
wavy = {version = "0.9", optional = true} # audio
stronghold = {version = "0.2", optional = true} # file
serde = {version = "1.0", optional = true}
window = {version = "0.5", optional = true} # window, graphics
pix = {version = "0.13", optional = true}
footile = {version = "0.6", optional = true}
smelling_salts = {version = "0.2", optional = true}
devout = {version = "0.2", optional = true}
nanorand = {version = "0.5", optional = true}
fon = {version = "0.5", optional = true}
rvg = {version = "0.2", optional = true, default-features = false, features = ["render"]}
chrono = {version = "0.4", optional = true, default-features = false, features = ["clock"]}
fonterator = {version = "0.9", optional = true, default-features = false, features = ["normal-font"]}

[build-dependencies]
res = {version = "0.6", optional = true} # video

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = []
audio = ["fon"]
bluetooth = []
camera = []
graphics = ["window", "fonterator", "res", "rvg", "footile", "video"]
gui = []
task = ["pasts"]
database = ["stronghold", "serde"]
port = []
input = ["human"]
log = ["devout"]
microphone = ["wavy", "audio"]
client = ["smelling_salts"]
server = ["smelling_salts"]
info = ["whoami"]
speakers = ["wavy", "audio"]
when = ["chrono"]
timer = []
random = ["nanorand"]
video = ["pix"]
haptic = []
usb = []
